--- a/css/stylize.css
+++ b/css/stylize.css
@@ -1,7 +1,7 @@
 
 body {
-    color: white;
-    background-color: black;
+    /* color: white; */
+    /* background-color: black; */
 }
 
 .cols {
